--- a/FrontEndMentor/3-column-preview-card-component-main/index.html
+++ b/FrontEndMentor/3-column-preview-card-component-main/index.html
@@ -20,21 +20,21 @@
   <div class="container">
 
     <div class="col" id="one">
-      <img src="/images/icon-sedans.svg">
+      <img src="/images/icon-sedans.svg" alt="car-sedan">
       <h2>SEDANS</h2>
       <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city
         or on your next road trip.</p>
       <button class="btn" id="btnOne">Learn More</button>
     </div>
     <div class="col" id="two">
-      <img src="/images/icon-suvs.svg" alt="">
+      <img src="/images/icon-suvs.svg" alt="car-suv">
       <h2>SUVS</h2>
       <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation
         and off-road adventures.</p>
       <button class="btn" id="btnTwo">Learn More</button>
     </div>
     <div class="col" id="three">
-      <img src="/images/icon-luxury.svg" alt="">
+      <img src="/images/icon-luxury.svg" alt="car-luxuary">
       <h2>LUXURY</h2>
       <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury
         rental and arrive in style.</p>
